# cuckoo

./: .env.sample  .gitignore  LICENSE  README.md  Readme.md  pyproject.toml  requirements.txt
cuckoo/: __init__.py  base.py
cuckoo/assets/: coingecko_coins_list.json  watchlist.yaml
cuckoo/datasource/: coingecko.py  geckoterminal.py
cuckoo/handler/: checker_handler.py  handler_manager.py  watcher_handler.py
cuckoo/messenger/: console_sender.py  email_sender.py  gmail_sender.py  messenger_manager.py
cuckoo/processor/: simple_processor.py
cuckoo/tracker/: __init__.py  coingecko_tracker.py  geckoterminal_tracker.py  token_tracker.py
cuckoo/utils/: __init__.py  request_helper.py
tests/: test_gmail_sender.py  test_simple_processor.py  test_token_tracker.py
