[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "t2og-cuckoo"
dynamic = ["version"]
requires-python = ">=3.10"
license = {file = "LICENSE"}
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
    "requests",
    "python-dotenv",
    "PyYAML",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib"
]

[project.scripts]
cuckoo = "cuckoo.tracker:cli"

[tool.setuptools.dynamic]
version = {attr = "cuckoo.__version__"}